--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
     <div class="container">
       <a class="navbar-brand" href="">
-        <img src="images/logo.png" alt="logo image" class="logo">
+        <img src="logo.png" alt="logo image" class="logo">
         <a class="navbar-brand" href="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -136,7 +136,7 @@ Each project is crafted to ensure speed, usability, and a professional online pr
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
         <div class="services__pic">
-          <img src="images/services/service-2.png" alt="marketing illustration" class="img-fluid">
+          <img src="service-2.png" alt="marketing illustration" class="img-fluid">
         </div>
       </div>
     </div>
